tests/error/error.sp
program error;

label
    a, a;

type
    enum = (e0, e1, e2, e3;

var
    a: integers;

begin
    a := 2 + e2 (*


*)  + 5 + 9;
    writeln (a)
end.
